[project]
name = "agentic-tutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.111.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.138.0",
    "langchain>=1.3.11",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-nvidia-ai-endpoints>=1.4.1",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.6",
    "mcp>=1.28.0",
    "openai>=2.43.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "redis>=8.0.1",
    "structlog>=26.1.0",
    "uvicorn>=0.49.0",
]
